--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/CommonLib_gui_essentials"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_JSON_Parser"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/CommonLib_gui_essentials"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/CommonLib_Dialogs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
