--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="res"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_JSON_Parser"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CommonLib_gui_essentials"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CommonLib_Dialogs"/>
