JAVA: [Eclipse] - Projekt "PlanetCrafterSaveGameViewer"    - added MapShapes
git-svn-id: file:///G/_svn_repo/programming/JAVA-Projects%20-%20Eclipse/PlanetCrafterSaveGameViewer@7272 8592820e-bdd2-cc16-cb4b-ca06df7e8abd

--- a/.classpath
+++ b/.classpath
@@ -7,9 +7,11 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_Common_Dialogs"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_Common_Essentials"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_JSON_Parser"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_Common_HSColorChooser"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_JSON_Parser"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_Common_Essentials"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_Common_Dialogs"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_Common_Imaging"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JavaLib_LineEditor"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
