feat: added background image to map (basic functionality)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /PlanetCrafterSaveGameViewer_old.jar
 /quaternions.xlsx
 /PlanetCrafterSaveGameViewer.bat
+/PlanetCrafterSaveGameViewer - MapBackgroundImage.png
