feat: separated FarWreckAreas by planet

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /quaternions.xlsx
 /PlanetCrafterSaveGameViewer.bat
 /PlanetCrafterSaveGameViewer - MapBackgroundImage.png
+/PlanetCrafterSaveGameViewer - MapBackgroundImage - Prime.png
