--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /PlanetCrafterSaveGameViewer.bat
 /PlanetCrafterSaveGameViewer - MapBackgroundImage.png
 /PlanetCrafterSaveGameViewer - MapBackgroundImage - Prime.png
+/PlanetCrafterSaveGameViewer - MapBackgroundImage - Humble.png
